Fixed alignment in section-apps between 768px and 1023px

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -885,6 +885,10 @@ body {
     padding: 0;
   }
 
+  .category-img {
+    min-height: 367px;
+  }
+
   .footer-legal {
     display: flex;
     justify-content: center;
